--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>Theladuoc</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" id="favIcon" type="image/x-icon" href="favicon.ico">
   <script src="https://ims.mediacdn.vn/micro/media/vod/plugins/dist/ims-plugin-media.js"></script>
 </head>
 <body>
